<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_16sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_deals"
                android:layout_width="@dimen/_56sdp"
                android:layout_height="@dimen/_56sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:clickable="false"
                android:contentDescription="@string/deal_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_deals" />

            <TextView
                android:id="@+id/tv_title_deals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/deal_title_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_description_deals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="start"
                android:justificationMode="inter_word"
                android:text="@string/placeholder_deal_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_deals" />

            <TextView
                android:id="@+id/tv_coupon_code_deals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:gravity="start"
                android:text="@string/placeholder_coupon_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_deals"
                app:layout_constraintTop_toBottomOf="@+id/tv_discounted_price_deals" />

            <TextView
                android:id="@+id/tv_discounted_price_deals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:text="@string/placeholder_discounted_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toStartOf="@+id/imageButton"
                app:layout_constraintStart_toEndOf="@+id/iv_deals"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_deals" />

            <ImageButton
                android:id="@+id/imageButton"
                style="@android:style/Widget.Material.Light.ImageButton"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/add_to_favorites_button"
                android:src="@drawable/baseline_favorite_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>